_scss/_pages/index.scss
.home__hero {
  position: relative;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: calc(80vh - #{$navbar-height});
  background-size: cover;
  background-position: center center;

  @include bp-md-min() {
    height: calc(70vh - #{$navbar-height});
  }
}

.home__hero__overlay {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  background-color: rgba(0,0,0,.3);
  z-index: 100;
}

.home__hero__text {
  padding: 0 $gutter-sm;
  text-align: center;
  color: white;
  z-index: 101;
}

.home__hero__text__cta-1 {
  font-family: $garamond;
  font-size: 24px;
  font-weight: 500;
  font-style: italic;
  letter-spacing: 1px;
  line-height: 1.5em;

  @include bp-md-min() {
    font-size: 61px;
  }
}

.home__hero__text__cta-2 {
  margin-top: $gutter-sm;
  font-size: 30px;
  font-weight: 700;
  line-height: 1.5em;

  @include bp-md-min() {
    margin-top: $gutter-md;
    font-size: 68px;
  }
}

.home__hero__button {
  margin-top: $gutter-md;

  @include bp-md-min() {
    margin-top: $gutter-xl;
  }
}

.home__content {
}

.home__content__section {
  padding: $gutter-lg 0;

  &:nth-child(even) {
    background-color: $solitude;
  }
}

.home__content__section__inner {
  margin-left: auto;
  margin-right: auto;
  max-width: 780px;
  padding: 0 $gutter-md;
  margin-top: $gutter-xl;
  text-align: center;

  p, img {
    margin-top: $gutter-md;
  }

  img {
    max-width: 580px;
    margin-bottom: $gutter-md;
  }

  p, ul {
    text-align: left;
    line-height: 1.6em;
  }

  p { font-size: 19px; }

  ul {
    padding-left: 20px;
    font-size: 18px;
  }
}

.home__content__section__inner--get-started {
  > img { width: 105px; }
}

.home__content__section__inner--get-started__product_previews {
  display: flex;
  flex-direction: column;

  @include bp-md-min() {
    flex-direction: row;
    justify-content: space-around;
  }
}

